--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 bin_PROGRAMS = honcho
 
-honcho_SOURCES = main.c queue.c worker_execute.c worker_cat.c
+honcho_SOURCES = main.c queue.c worker_execute.c worker_cat.c worker_status_query.c
