--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,5 @@
 bin_PROGRAMS = honcho
 
-honcho_SOURCES = main.c queue.c cmd_execute.c cmd_cat.c cmd_status_query.c cmd_status_overview.c
+honcho_SOURCES = main.c queue.c cmd_execute.c cmd_cat.c cmd_status_query.c cmd_status_overview.c cmd_submit.c utils.c
+
+honcho_LDADD=-luuid
