Include *.h as source

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,12 @@
 bin_PROGRAMS = honcho
 
-honcho_SOURCES = main.c cmd_execute.c cmd_cat.c cmd_status_query.c cmd_status_overview.c cmd_submit.c utils.c cmd_state.c
+honcho_SOURCES = main.c \
+	cmd_cat.c cmd_cat.h \
+	cmd_execute.c cmd_execute.h \
+	cmd_state.c cmd_state.h \
+	cmd_status_overview.c cmd_status_overview.h \
+	cmd_status_query.c cmd_status_query.h \
+	cmd_submit.c cmd_submit.h \
+	utils.c utils.h 
 
 honcho_LDADD=-luuid
