--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,7 +6,11 @@ honcho_SOURCES = main.c \
 	cmd_state.c cmd_state.h \
 	cmd_status_overview.c cmd_status_overview.h \
 	cmd_status_query.c cmd_status_query.h \
-	cmd_submit.c cmd_submit.h \
 	utils.c utils.h 
 
-honcho_LDADD=-luuid
+DEFS = @DEFS@ -DDATA_DIR=\"$(data_dir)\"
+
+install-exec-hook:
+	-if test ! -d $(DESTDIR)/$(data_dir); \
+		$(mkinstalldirs) $(DESTDIR)/$(data_dir)/queue/default; \
+	fi
