Implemented honcho path [id]. Display the used path

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,7 @@ honcho_SOURCES = main.c \
 	cmd_state.c cmd_state.h \
 	cmd_status_overview.c cmd_status_overview.h \
 	cmd_status_query.c cmd_status_query.h \
+	cmd_path.c cmd_path.h \
 	utils.c utils.h 
 
 DEFS = @DEFS@ -DDATA_DIR=\"$(data_dir)\"
