Implemented honcho delete and tests

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,11 +2,12 @@ bin_PROGRAMS = honcho
 
 honcho_SOURCES = main.c \
 	cmd_cat.c cmd_cat.h \
+	cmd_delete.c cmd_delete.h \
 	cmd_execute.c cmd_execute.h \
+	cmd_path.c cmd_path.h \
 	cmd_state.c cmd_state.h \
 	cmd_status_overview.c cmd_status_overview.h \
 	cmd_status_query.c cmd_status_query.h \
-	cmd_path.c cmd_path.h \
 	utils.c utils.h 
 
 DEFS = @DEFS@ -DDATA_DIR=\"$(data_dir)\"
